Fixes to limit horizontal scrolling based on the line length of items visible in the inline editor (instead of the longest line in the backing document)

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -449,6 +449,10 @@ a, img {
     }
 }
 
+.inlineEditorHolder {
+    overflow: hidden;
+}
+
 /* CSSInlineEditor rule list */
 .relatedContainer {
     @top-margin: 12px;
